cmake_minimum_required(VERSION 3.21)

project(rainfall)

set(CMAKE_CXX_STANDARD 17)

add_executable(${PROJECT_NAME}
#        level0/source.cpp
#        level1/source.cpp
#        level2/source.cpp
#        level3/source.cpp
#        level4/source.cpp
#        level5/source.cpp
#        level6/source.cpp
#        level7/source.cpp
#        level8/source.cpp
#        level9/source.cpp
#        bonus0/Ressources/shellcode.cpp
#        bonus0/source.cpp
#        bonus1/Ressources/input.cpp
#        bonus1/source.cpp
#        bonus2/Ressources/shellcode.cpp
#        bonus2/source.cpp
        bonus3/source.cpp
)
